# BUIDL-2026-NEAR

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
circuits/insurance_eligibility/: Nargo.toml  Prover.toml
contracts/zkp_verifier/: Cargo.toml
docs/01_Concept_Design/: B2B_BROKER_CONCEPT.md  BUIDLHACK_2026_GUIDELINES.md  COMPETITIVE_ANALYSIS.md  GENETIC_AI_INSURANCE_AGENT.md  HZN_APPLICATION_STRATEGY.md  HZN_INCUBATION_DRAFT.md  LUMA_NEAR_WORKSHOP_FULL_TEXT.md  MONEY_FLOW.md  NEAR_AI_WORKSHOP_SLIDES.md  NEAR_OPENCLAW_IRONCLAW_GUIDE.md  PITCH_DECK.md  V2_ADVANCED_EXPANSION_PROPOSAL.md  VERIFIABLE_EXECUTION_ARCH.md  VISION_CORE_LEVERAGE.md
docs/02_UI_Screens/: DEMO_SCENARIO.md  DESIGN_SYSTEM_SHADCN.md  SCREEN_SPEC.md  USER_FLOW.md
docs/03_Technical_Specs/: 00_SYSTEM_ARCHITECTURE.md  00_diagram.excalidraw  AI_CONCIERGE_ARCH.md  DB_SCHEMA.md  DEPLOYMENT_STRATEGY.md  FILE_UPLOAD_FLOW.md  LATEST_NEAR_TECH_STACK.md  NEAR_PRIVACY_STACK_ARCH.md  PHASE2_IMPLEMENTATION_SPEC.md  PHASE3_BLOCKERS_AND_INQUIRY.md  PRODUCTION_FILE_PIPELINE_SPEC.md  PROJECT_SETUP_GUIDE.md  SECRET_KEEPER_IMPL_SPEC.md  TEE_ATTESTATION_SPEC.md  ZKP_IN_TEE_WASM_IMPL_SPEC.md
docs/04_Logic_Progress/: AI_MATCHING_PIPELINE.md  IMPLEMENTATION_PLAN.md  ROADMAP.md
drizzle/: 0000_oval_sabra.sql  0001_slimy_whistler.sql  0002_rich_the_renegades.sql  0003_purple_stardust.sql
messages/: en.json  ko.json
zkp-prover-wasm/: Cargo.toml  REGISTER.md
zkp-prover-wasm/src/: main.rs
(+80 files in other folders)
